# GraphRAG

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  MCP-INTERFACE.md  Makefile  README.md  REST-API.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: guard-inhouse-docs.yml
demos/: Dockerfile  docker-compose.yml  load.py  scenario.py  server.py  start.sh
demos/static/: app.js  index.html  style.css
eval/: bench.py  gold.py  graphdoc_io.py  record.py  scoring.py
eval/corpus/: acme.txt  atlas.txt  beta_labs.txt  borealis.txt  cobalt_systems.txt  crest.txt  delta_freight.txt  echo_robotics.txt  falcon_drones.txt  gamma_logistics.txt  harbor.txt  maria_garcia.txt  nimbus.txt  orchard.txt  pinnacle.txt  quill.txt  summit.txt  vertex.txt
eval/fixtures/: domain.json  generic.json
graphrag/: api.py  cli.py  config.py  mcp_server.py  providers.py  vectorstore.py
graphrag/ingestion/: chunker.py  extractor.py  loaders.py  (+2 more)
scripts/: install-hooks.sh  neo4j-down.sh  neo4j-up.sh  run-integration-test.sh  show-relations.sh  weaviate-down.sh  weaviate-up.sh
tests/: conftest.py  test_api.py  test_boundary.py  test_chunker.py  test_cli.py  test_config.py  test_delete.py  test_demo_server.py  test_eval_bench.py  test_eval_scoring.py  test_expander.py  test_expander_hardening.py  test_extractor.py  test_ingest_chunks.py  test_integration.py  test_mcp.py  test_providers.py  test_qa.py  test_rerank.py  test_retrieval_pipeline.py  test_scenario.py  test_service.py  test_tenant_constraints.py  test_tenant_isolation.py  test_vectorstore.py
(+9 files in other folders)
