[project]
name = "graphrag"
version = "0.1.0"
description = "GraphRAG demo with LangChain + Neo4j"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-experimental>=0.3",
    "langchain-neo4j>=0.1",
    "neo4j>=5.20",
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "tenacity>=8.2",
    "rich>=13.0",
    "fastapi>=0.115",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
vector = ["weaviate-client>=4.0"]      # Weaviate vector search (CLI + demo; not the service)
rerank = ["sentence-transformers>=3.0"]  # local cross-encoder rerank (BGE)
mcp = ["mcp>=1.0"]                        # optional MCP server surface
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
graphrag = "graphrag.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["graphrag*"]
